# haskelldb-genschema

./: haskelldb-genschema.cabal
debian/: changelog  control  rules  watch
src/Database/HaskellDB/: SchemaGen.hs
src/Database/HaskellDB/HDBRec/: Class.hs  SelectType.hs  TH.hs
src/Database/HaskellDB/Schema/: DB2.hs
